test index.html update

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-
-Hello, GitHub Actions! <br> Hola a todos
+<!DOCTYPE html><html><body><h1>Test Page</h1></body></html>
+<h1> Hello, GitHub Actions!
+</h1>
