--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-<!DOCTYPE html><html><body><h1>Test Page</h1></body></html>
-<h1> Hello, GitHub Actions!
-</h1>
+<!DOCTYPE html><html><body><h1>Test Page</h1><p>Hello, GitHub Actions! vie 03 oct 2025 20:41:49 CEST</p></body></html>
