--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><body><h1>Test Page</h1><p>Hello, GitHub Actions! vie 03 oct 2025 21:20:06 CEST</p></body></html>
+<!DOCTYPE html><html><body><h1>Test Page</h1><p>Hello, GitHub Actions! Fri Oct 03 2025 21:38:00 CEST</p></body></html>
